# cpr

./: CMakeLists.txt  ReadMe.txt  main.cpp  shoot
include/: Gun.h  Point.h  Soldier.h
src/: Gun.cpp  Point.cpp  Soldier.cpp
